# mosaic

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yaml  error-handler.ts  nitro.config.ts  package.json  pnpm-lock.yaml  rust-toolchain.toml  types.ts
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
api/v1/events/: index.get.ts  push.get.ts  releases.get.ts
api/v1/mosaic/: projects.get.ts  resolve-configs.get.ts
api/v1/mosaic/[owner]/[repositoryName]/: languages.get.ts
api/v1/mosaic/[owner]/[repositoryName]/readme/: [...path].get.ts
api/v1/mosaic/[username]/: contributions.get.ts
api/v1/mosaic/[username]/[repositoryName]/: config.get.ts  index.get.ts  languages.get.ts
api/v1/mosaic/[username]/[repositoryName]/readme/: [...path].get.ts  index.get.ts
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs
crates/cron/src/jobs/: projects.rs
crates/cron/src/tasks/: mod.rs  projects.rs
crates/events_api/: Cargo.toml
crates/events_api/src/: lib.rs  models.rs
crates/events_api/src/routes/: all.rs  mod.rs  pull_requests.rs  push.rs
crates/mosaic/: Cargo.toml
crates/mosaic-cron/src/: lib.rs
crates/mosaic-cron/src/tasks/: projects.rs
crates/mosaic-utils/: Cargo.toml
crates/mosaic-utils/src/: data.rs  error.rs  graceful_shutdown.rs  lib.rs
crates/mosaic-utils/src/projects/: mod.rs
crates/mosaic/src/: main.rs
crates/mosaic_api/: Cargo.toml
crates/mosaic_api/src/: lib.rs  models.rs
crates/mosaic_api/src/routes/: config.rs  languages.rs  mod.rs  readme.rs  resolve.rs
crates/mosaic_package/: Cargo.toml
crates/projects_api/: Cargo.toml
crates/projects_api/src/: lib.rs  models.rs
crates/projects_api/src/routes/: all_projects.rs  get_project.rs  get_project_config.rs  mod.rs
crates/repositories_api/: Cargo.toml
crates/repositories_api/src/: lib.rs  models.rs
crates/repositories_api/src/routes/: all_repositories.rs  get_repository.rs  get_repository_config.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  openapi.rs  routes.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: data.rs  error.rs  github_client.rs  github_graphql.rs  graceful_shutdown.rs  json_schema.rs  lib.rs  mosaic_config.rs
crates/utils/src/github/: mod.rs
crates/utils/src/github/models/: events.rs
crates/utils/src/models/: mod.rs
graphql/: profile_query.graphql  repository_query.graphql
migrations/: 0001_initialize.sql  0002_created_at.sql  0003_github_id.sql
renderer/: index.ts
routes/: hello-world.get.ts  index.get.ts  ping.get.ts
server/api/v1/mosaic/: projects.get.ts
server/api/v1/mosaic/[owner]/[repositoryName]/: config.get.ts  index.get.ts
server/api/v1/mosaic/[owner]/[repositoryName]/readme/: [...path].get.ts
server/routes/: json-schema.get.ts
server/utils/: graphql-queries.ts  json-schema.ts
src/: env.d.ts  main.rs
transformers/: badge-remover.ts  icon.ts  metadata.ts  unused-definition-remover.ts
utils/: config.ts  graphql-queries.ts  json-schema.ts  package.ts  readme.ts  repository.ts
