[package]
name = "mosaic_package"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "mosaic_package"
path = "src/lib.rs"
