[package]
name = "mosaic_server"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "mosaic_server"
path = "src/lib.rs"

[dependencies]
mosaic_utils = { workspace = true }
mosaic_cron = { workspace = true }
mosaic_events_api = { workspace = true }
mosaic_repositories_api = { workspace = true }
mosaic_api = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
