[package]
name = "mosaic_utils"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "mosaic_utils"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
thiserror = "1.0"
reqwest = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
graphql_client = "0.14.0"
tracing = { workspace = true }
toml = { workspace = true }
